src/components/Navigation/Navigation.css
.custom-navbar {
  background-color: black;
  width: 100%;
  height: 50px;
}

.custom-navbar .navbar-nav {
  position: absolute;
  right:10px;
}

.custom-navbar .navbar-nav .nav-link {
  padding: 10px 20px; 
  font-size: 18px;
  color: white;
}

.logo-container {
  display: flex;
  align-items: center;
}

.logo-container img {
  position: absolute;
  left:10px;
}

.sidebar {
  height: 100%;
  width: 0;
  position: fixed;
  z-index: 1;
  top: 0;
  right: 0;
  background-color: #111;
  overflow-x: hidden;
  transition: 0.5s;
  padding-top: 60px;
}

.sidebar ul {
  list-style-type: none;
  padding: 0;
  margin: 0;
}

.sidebar ul li {
  padding: 15px;
  text-align: center;
  font-size: 18px;
  color: #818181;
  transition: 0.3s;
  display: block;
}

.sidebar ul li:hover {
  background-color: #333;
  cursor: pointer;
  color: white;
}

.open-menu {
  font-size: 30px;
  cursor: pointer;
  background-color: rgba(0,0,0,0);
  color: white;
  padding: 10px 15px;
  border: none;
  position: absolute;
  top: 1px;
  right: 1px;
  z-index: 2;
}

.open-menu:hover {
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
  transition: transform 0.2s ease-in-out;
}

.closebtn {
  font-size: 30px;
  cursor: pointer;
  background-color: rgba(0,0,0,0);
  color: white;
  padding: 10px 15px;
  border: none;
  position: absolute;
  top: 1px;
  right: 1px;
  z-index: 2;
}

.closebtn:hover {
  transform: scale(1.1);
  -webkit-transform: scale(1.1);
  transition: transform 0.2s ease-in-out;
}

